# TestWeatherApp

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini
core/api/v1/: urls.py
core/api/v1/city/: api_views.py  serializers.py
core/apps/frontend/: apps.py
core/apps/frontend/static/css/: main.css
core/apps/frontend/static/js/: main.js
core/apps/frontend/templates/: main.html
core/apps/weather/: admin.py  apps.py  models.py
core/apps/weather/entities/: base.py  city.py
core/apps/weather/exceptions/: base.py  service.py
core/apps/weather/filters/: city.py
core/apps/weather/management/commands/: import_cities.py
core/apps/weather/migrations/: 0001_initial.py
core/apps/weather/services/: base.py  django_orm.py
core/frontend/: urls.py
core/frontend/v1/: urls.py
core/project/: container.py  urls.py
core/project/settings/: main.py
core/tests/services/: conftest.py  test_cities.py
core/weather_integration_api/entities/: base.py  forecast.py
core/weather_integration_api/exceptions/: base.py  weather_api_services.py
core/weather_integration_api/services/: base.py  weather_api.py
